Split openrewrite execution (#5112)
* [migrated_quarkus_4_42] Migrated with 4.42.0

* [migrated_quarkus_4_42] Conditional execution of rewrite

* [migrated_quarkus_4_42] Add documentation