@@ -9,6 +9,8 @@ quarkus_version=${QUARKUS_VERSION:-3.0.0.Alpha5}
 quarkus_file="${script_dir_path}/quarkus3.yml"
 project_version='quarkus-3-SNAPSHOT'
 
+export MAVEN_OPTS="-Xmx16192m -XX:MaxPermSize=512m"
+
 echo "Update project with Quarkus version ${quarkus_version}"
 
 set -x
@@ -27,7 +29,7 @@ ${mvn_cmd} -e -N -Dfull -DnewVersion=${project_version} -DallowSnapshots=true -D
 ${mvn_cmd} clean install -Dquickly
 
 # Launch Quarkus 3 Openrewrite
-${mvn_cmd} org.openrewrite.maven:rewrite-maven-plugin:4.41.1:run \
+${mvn_cmd} org.openrewrite.maven:rewrite-maven-plugin:4.42.0:run \
     -Drewrite.configLocation="${quarkus_file}" \
     -DactiveRecipes=io.quarkus.openrewrite.Quarkus3 \
     -Drewrite.recipeArtifactCoordinates=org.kie:jpmml-migration-recipe:"${project_version}" \
